--- a/cabin_visualizer.html
+++ b/cabin_visualizer.html
@@ -118,6 +118,22 @@
 		</div>
 
 		<div class="calibration-section">
+			<h4>Screen Text Sizes</h4>
+			<div class="slider-group">
+				<label>Logo: <input type="range" id="text-logo" min="6" max="24" value="10"><span
+						id="text-logo-val">10</span>px</label>
+				<label>Status: <input type="range" id="text-status" min="6" max="20" value="8"><span
+						id="text-status-val">8</span>px</label>
+				<label>Labels: <input type="range" id="text-labels" min="6" max="20" value="9"><span
+						id="text-labels-val">9</span>px</label>
+				<label>Values: <input type="range" id="text-values" min="6" max="20" value="9"><span
+						id="text-values-val">9</span>px</label>
+				<label>Icons: <input type="range" id="text-icons" min="8" max="30" value="12"><span
+						id="text-icons-val">12</span>px</label>
+			</div>
+		</div>
+
+		<div class="calibration-section">
 			<h4>Cabin Image</h4>
 			<div class="slider-group">
 				<label>X: <input type="range" id="cabin-x" min="-500" max="500" value="0"><span
@@ -179,6 +195,9 @@
 		<div class="calibration-actions">
 			<button id="save-calibration" class="action-btn">💾 Save</button>
 			<button id="reset-calibration" class="action-btn">🔄 Reset</button>
+			<button id="download-config" class="action-btn">📥 Export</button>
+			<button id="upload-config" class="action-btn">📤 Import</button>
+			<input type="file" id="config-file-input" accept=".json" style="display: none;">
 		</div>
 	</div>
 
